# shooty-triangle

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
src/: S_shapes.c  S_shapes.h  ammo.c  ammo.h  c_map.c  c_map.h  common.h  controller.c  controller.h  enemy.c  enemy.h  font_and_text.c  font_and_text.h  main.c  player.c  player.h
